--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -106,6 +106,15 @@ option {
     color: var(--black-color);
 }
 
+#play-audio-handler i {
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+
+#play-audio-handler i.hidden {
+    display: none;
+}
+
 main {
     display: flex;
     justify-self: center;
@@ -127,7 +136,7 @@ main {
     flex-flow: column wrap;
 }
 
-header.hidden, #start-game-area.hidden, #game-area.hidden, #result-game-area.hidden, #loading-screen.hidden, .player-result-area.hidden, #game-difficulty-configuration.hidden, #player-cheated-area.hidden  {
+header.hidden, #start-game-area.hidden, #game-area.hidden, #result-game-area.hidden, #loading-screen.hidden, .player-result-area.hidden, #game-difficulty-configuration.hidden, #player-cheated-area.hidden, #audio-area  {
     display: none;
 }
 
@@ -203,6 +212,13 @@ h2 {
     width: 200px;
 }
 
+.word.marked {
+    padding: .5rem;
+    border-radius: 10px;
+    background-color: var(--red-color);
+    border-bottom: none;
+}
+
 #player-inputs-area {
     display: flex;
     flex-flow: column wrap;
@@ -251,10 +267,18 @@ h2 {
 
 
 #result-game-area {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-flow: column wrap;
     gap: 2rem;
     width: 80%;
+}
+
+#result-game-area-wrapper h2 {
+    text-align: center;
 }
 
 #result-game-area  img {
@@ -263,7 +287,7 @@ h2 {
 }
 
 .player-result-area-wrapper {
-    width: 80%;
+    width: 60%;
 }
 
 .player-result-area {
@@ -315,6 +339,23 @@ h2 {
     top: 20%;
 }
 
+#connection-failed-modal {
+    position: absolute;
+    top: 60%;
+    left: -100%;
+    transition: 0.5s;
+    background-color: var(--red-color);
+    border-radius: 10px;
+    padding: 2rem;
+    display: flex;
+    flex-flow: column wrap;
+    max-width: 80%;
+}
+
+#connection-failed-modal.show {
+    left: 5%;
+}
+
 footer {
     position: absolute;
     bottom: 0;
@@ -349,6 +390,10 @@ td.pixel {
 }
 
 @media screen and (max-width: 600px) {
+    .word {
+        width: auto;
+    }
+
     .start-game-btn.header span {
         display: none;
     }
@@ -360,29 +405,7 @@ td.pixel {
   
 }
 
-@media screen and (max-width: 500px) {
-    .word {
-        width: auto;
-    }
-
-    #result-game-area {
-        display: flex;
-        flex-flow: column wrap;
-        gap: 2rem;
-        width: 80%;
-    }
-
-    #result-game-area  img {
-        align-self: center;
-        width: 70%;
-    }
-
-    .player-result-area-wrapper {
-        width: 80%;
-    }
-}
-
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 520px) {
     .player-result-area-wrapper h2{
         font-size: 2rem;
     }
@@ -412,7 +435,42 @@ td.pixel {
     #definitions-area {
         width: 70%;
     }
+
+    #connection-failed-modal {
+        padding: .5rem;
+    }
+
+    #player-wins p, #player-defeats p {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #player-wins-span, #player-defeats-span {
+        text-align: center;
+    }
 }
+
+@media screen and (max-width: 350px) {
+    header {
+        padding: 1rem .5rem;
+    }
+
+    #play-audio-handler {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #player-inputs-area {
+        padding: 1rem;
+    }
+
+    #player-cheated-area {
+        width: 90%;
+    }
+}
+
 
 
 @media (hover: hover) {
